# tectonopedia

./: .gitignore  .parcelrc  Cargo.toml  LICENSE-MIT  README.md  gulpfile.js  package.json
.devcontainer/: Dockerfile  devcontainer.json
ci/: azure-build-and-test-pkgconfig.yml  azure-build-and-test-vcpkg.yml  azure-build-and-test.yml  azure-deployment-setup.yml  azure-deployment.yml  azure-generic-build-setup.yml  azure-generic-build.yml  azure-pipelines.yml  azure-prep.yml
cls/: pedia.cls  postamble.tex  preamble.tex  tdux.tex  template.html
cls/pedia/: at_escaping.tex  crossrefs.tex  entries.tex  explainers.tex  fonts.tex  links.tex  lists.tex  metadata.tex  outputs.tex  sectioning.tex  tdux_lowlevel.tex  templates.tex  terms.tex  tex_code.tex  typography.tex  verbatim.tex
idx/: entries.toml  explainers.toml  terms.toml
serve-ui/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
serve-ui/src/: App.vue  BuildProgressTab.vue  OutputTab.vue  YarnServeTab.vue  main.ts  messages.ts  spanset.ts
serve-ui/src/assets/: main.css
src/: assets.rs  build.rs  cache.rs  config.rs  entrypoint_file.rs  holey_vec.rs  index.rs  inputs.rs  main.rs  messages.rs  metadata.rs  multivec.rs  operation.rs  pass1.rs  pass2.rs  serve.rs  tex_escape.rs  tex_pass.rs  texworker.rs  watch.rs  worker_status.rs  yarn.rs
txt/: index.tex
txt/concepts/: divio-documentation-system.tex  escapes.tex  format.tex  markdown.tex  primitives.tex
txt/explain/: tectonopedia-design.tex  what-is-tex.tex  why-tex.tex
txt/pedia/: at_escaping.tex  crossrefs.tex  entries.tex  explainers.tex  links.tex  metadata.tex  outputs.tex  tdux_lowlevel.tex  templates.tex  terms.tex  tex_code.tex  typography.tex  verbatim.tex
txt/primitives/: dump.tex  end.tex  message.tex
web/: App.vue  DispatchModal.vue  DispatchTool.vue  HelpTool.vue  ModalManager.vue  SearchModal.vue  SearchResult.vue  SearchTool.vue  SearchWidget.vue  ToolManager.vue  base.ts  index.ts  search-index.js  style.scss
