[package]
name = "tectonopedia"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "^1.3"
clap = { version = "^4", features = ["derive"] }
csv = "^1.2"
digest = "0.10"
filetime = "0.2"
generic-array = { version = "0.14", features = ["serde"] }
notify-debouncer-mini = { version = "0.2", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
sha2 = "0.10"
string-interner = "0.14"
tectonic = "0.13"
tectonic_bridge_core = "0.3"
tectonic_engine_spx2html = "0.3"
tectonic_errors = "0.2"
tectonic_status_base = "0.2"
tempfile = "^3.4"
termcolor = "^1.1"
threadpool = "^1.8"
toml = "0.5"
walkdir = "^2"

[features]
default = ["geturl-reqwest"]
external-harfbuzz = ["tectonic/external-harfbuzz"]
geturl-curl = ["tectonic/geturl-curl"]
geturl-reqwest = ["tectonic/geturl-reqwest"]
native-tls-vendored = ["tectonic/native-tls-vendored"]
